# JusticeAI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend-rust/config/: default.toml  development.toml  production.toml
backend-rust/sql/: init_import_tables.sql  init_workspace_tables.sql  repair_corrupted_appeal_text.sql
backend-rust/src/: app.rs  bootstrap.rs  config_loader.rs  main.rs
backend-rust/src/api/: appeal_materials.rs  appeal_standardization.rs  appeals.rs  geo.rs  health.rs  import.rs  import_query.rs  mobile.rs  mod.rs  platform.rs  prosecutor_appeals.rs  system.rs  workflow.rs  workspace.rs
backend-rust/src/domain/: appeal_score.rs  appeal_status.rs  mod.rs
backend-rust/src/services/: ai.rs  appeal_conversion_service.rs  appeal_material_service.rs  appeal_notification_service.rs  appeal_service.rs  appeal_standardization_service.rs  embedding.rs  geo.rs  graph.rs  mod.rs  pipeline.rs  vector.rs
backend-rust/src/shared/: error.rs  response.rs
frontend-vue/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend-vue/src/: App.vue  MobileApp.vue  main.js  main.ts  style.css
frontend-vue/src/api/: alerts.ts  client.ts  dashboard.ts  imports.ts  index.ts  platform.js  reports.ts  risk.ts  supervision.ts  system.ts  workflow.ts
frontend-vue/src/components/: AgentWorkspace.vue  (+11 more)
local-services/milvus/: user.yaml
旧进程文档/: JusticeAI-当前功能与工作流说明.md  交接文档-2026-04-20.md
(+26 files in other folders)
