[package]
name = "justiceai-backend"
version = "0.1.0"
edition = "2021"
authors = ["GitHub: KanameMadoka520"]
description = "JusticeAI backend service built with Rust + Axum for localized prosecutorial risk analysis platform"
license = "Proprietary"
publish = false

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
config = "0.14"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros"
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
